# mouse-maze-position-from-brain-signals

./: .gitignore  README.md  dataset.py  makefile  models.py  pyproject.toml  train.py
scripts/: download_dataset.sh  runner.sh
visualization/: __init__.py  trajectory_gif.py  trajectory_trail_gif.py  trajectory_visual.py
